# qsvn2git

./: CMakeLists.txt  LICENSE  README.md  main.cpp  qconvertorworker.cpp  qconvertorworker.h  qmaindialog.cpp  qmaindialog.h  qmaindialog.ui  qmaindialog_old.cpp  qmaindialog_old.h  qmaindialog_old.ui  qsvn2git.pro
